--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tiny_renderer"
 version = "0.1.0"
 edition = "2021"
-authors = "ink-carp <18020970773@163.com>"
+authors = ["ink-carp <18020970773@163.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
