--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "tiny_renderer"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-authors = "ink-carp <18020970773@163.com>"
+authors = ["ink-carp <18020970773@163.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
+panic = "abort"
